force-app/main/default/objects/infy_tracker__Assets__c/infy_tracker__Assets__c.object-meta.xml
<CustomObject>
    <label>Tracker Assets</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>