force-app/main/default/objects/infy_tracker__Assets__c/fields/infy_tracker__Asset_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>infy_tracker__Asset_Sub_Category__c</fullName>
    <label>Asset Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>infy_tracker__Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Industry Vertical / Sub-vertical</fullName>
            </value>
            <value>
                <fullName>Horizontal Business Capabilities</fullName>
            </value>
            <value>
                <fullName>Monetizable/Horizontal Tech Solution</fullName>
            </value>
            <value>
                <fullName>Cross Industry Business Assets</fullName>
            </value>
            <value>
                <fullName>(Engineering) Frameworks</fullName>
            </value>
            <value>
                <fullName>Platform Services</fullName>
            </value>
            <value>
                <fullName>AI/ML Models</fullName>
            </value>
            <value>
                <fullName>BOTs</fullName>
            </value>
            <value>
                <fullName>Code Snippets</fullName>
            </value>
            <value>
                <fullName>Tools</fullName>
            </value>
            <value>
                <fullName>(Knowledge) Frameworks</fullName>
            </value>
            <value>
                <fullName>Solution Capability Models</fullName>
            </value>
            <value>
                <fullName>Reference Architecture</fullName>
            </value>
            <value>
                <fullName>Process Maps/ Models</fullName>
            </value>
            <value>
                <fullName>Project Docs</fullName>
            </value>
            <value>
                <fullName>ProposalsLarge Deal Submissions</fullName>
            </value>
            <value>
                <fullName>Case Studies</fullName>
            </value>
            <value>
                <fullName>Kshop</fullName>
            </value>
            <value>
                <fullName>BTN</fullName>
            </value>
            <value>
                <fullName>Methodologies</fullName>
            </value>
            <value>
                <fullName>Approaches</fullName>
            </value>
            <value>
                <fullName>Best Practices</fullName>
            </value>
            <value>
                <fullName>Webinars &amp; Lectures</fullName>
            </value>
            <value>
                <fullName>Tech/Functional Byes</fullName>
            </value>
            <value>
                <fullName>Process Documents</fullName>
            </value>
            <value>
                <fullName>Article</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>