force-app/main/default/objects/infy_tracker__Assets__c/fields/infy_tracker__Asset_URL__c.field-meta.xml
<CustomField>
    <fullName>infy_tracker__Asset_URL__c</fullName>
    <label>Asset URL</label>
    <type>Url</type>
</CustomField>