force-app/main/default/objects/infy_tracker__Assets__c/fields/infy_tracker__Curator__c.field-meta.xml
<CustomField>
    <fullName>infy_tracker__Curator__c</fullName>
    <label>Curator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>