force-app/main/default/objects/infy_tracker__Assets__c/fields/infy_tracker__External_ID__c.field-meta.xml
<CustomField>
    <fullName>infy_tracker__External_ID__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>