force-app/main/default/objects/infy_tracker__Assets__c/fields/infy_tracker__Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>infy_tracker__Submitted_By__c</fullName>
    <label>Submitted By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>