force-app/main/default/objects/infy_tracker__Assets__c/fields/infy_tracker__Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>infy_tracker__Submitted_Date__c</fullName>
    <label>Submitted Date</label>
    <type>DateTime</type>
</CustomField>