force-app/main/default/objects/infy_tracker__Assets__c/fields/infy_tracker__Team__c.field-meta.xml
<CustomField>
    <fullName>infy_tracker__Team__c</fullName>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>infy_tracker__Gobal_Teams</valueSetName>
    </valueSet>
</CustomField>