force-app/main/default/objects/infy_tracker__Assets__c/listViews/infy_tracker__All1.listView-meta.xml
<ListView>
    <fullName>infy_tracker__All1</fullName>
    <columns>NAME</columns>
    <columns>infy_tracker__Quarter__c</columns>
    <columns>infy_tracker__Team__c</columns>
    <columns>infy_tracker__Category__c</columns>
    <columns>infy_tracker__Asset_Sub_Category__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>infy_tracker__Asset_Status__c</columns>
    <columns>infy_tracker__Curator__c</columns>
    <columns>infy_tracker__Submitted_By__c</columns>
    <columns>infy_tracker__Asset_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Details</label>
</ListView>